<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <item android:icon="@drawable/mas"
        android:id="@+id/btn_mas"
        android:title="Mas"
        app:showAsAction="always">

        <menu>
            <item
                android:id="@+id/btn_buscar"
                android:icon="@drawable/busqueda"
                android:title="@string/bus"
                />

            <item
                android:id="@+id/btn_agrega"
                android:icon="@drawable/agregar"
                android:title="@string/agr"
                />

            <item
                android:id="@+id/btn_limpia"
                android:icon="@drawable/limpiar"
                android:title="@string/lim"
                />

            <item
                android:id="@+id/btn_conectar"
                android:icon="@drawable/conectar"
                android:title="@string/con"
                />

            <item
                android:id="@+id/btn_cerrar"
                android:icon="@drawable/salir"
                android:title="@string/btnCierre"
                />
        </menu>

    </item>
</menu>