<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".maestro_detalle_productos.fragment_contenido">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:padding="30sp"
        android:scrollbars="vertical">


        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/tarjetaNombre"
            app:cardElevation="6dp"
            android:layout_marginBottom="25dp"
            app:cardCornerRadius="6dp"
            app:cardBackgroundColor="#0288D1"
            app:cardPreventCornerOverlap="false"

            >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="10dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/box_white"
                        android:layout_gravity="center_vertical"
                        android:paddingLeft="15dp"
                        android:paddingRight="15dp"/>

                    <View
                        android:layout_width="1dp"
                        android:layout_height="match_parent"
                        android:background="@android:color/white"/>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/txtNombre"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:padding="10dp"
                            android:text="@string/lblPro"
                            android:textSize="18sp"
                            android:layout_gravity="center_vertical"
                            android:gravity="center"
                            android:textColor="@android:color/white"

                            />

                    </LinearLayout>


                </LinearLayout>




            </LinearLayout>


        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/tarjetaCodigo"
            app:cardElevation="6dp"
            android:layout_marginBottom="25dp"
            app:cardCornerRadius="6dp"
            app:cardBackgroundColor="#0288D1"
            app:cardPreventCornerOverlap="false"

            >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="10dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/barcode_white_32"
                        android:layout_gravity="center_vertical"
                        android:paddingLeft="15dp"
                        android:paddingRight="15dp"/>

                    <View
                        android:layout_width="1dp"
                        android:layout_height="match_parent"
                        android:background="@android:color/white"/>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/txtCodigo"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:textColor="@android:color/white"
                            android:text="@string/lblCo"
                            android:textSize="18sp"
                            android:layout_gravity="center_vertical"
                            android:gravity="center"/>

                    </LinearLayout>


                </LinearLayout>




            </LinearLayout>


        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/tarjetaCategoria"
            app:cardElevation="6dp"
            android:layout_marginBottom="25dp"
            app:cardCornerRadius="6dp"
            app:cardBackgroundColor="#0288D1"
            app:cardPreventCornerOverlap="false"

            >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="10dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/list_32"
                        android:layout_gravity="center_vertical"
                        android:paddingLeft="15dp"
                        android:paddingRight="15dp"/>

                    <View
                        android:layout_width="1dp"
                        android:layout_height="match_parent"
                        android:background="@android:color/white"/>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/txtCate"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:textColor="@android:color/white"
                            android:text="@string/lblcate"
                            android:textSize="18sp"
                            android:layout_gravity="center_vertical"
                            android:gravity="center"/>

                    </LinearLayout>


                </LinearLayout>




            </LinearLayout>


        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/tarjetaMarca"
            app:cardElevation="6dp"
            android:layout_marginBottom="25dp"
            app:cardCornerRadius="6dp"
            app:cardBackgroundColor="#0288D1"
            app:cardPreventCornerOverlap="false"

            >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="10dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/buffer_32"
                        android:layout_gravity="center_vertical"
                        android:paddingLeft="15dp"
                        android:paddingRight="15dp"/>

                    <View
                        android:layout_width="1dp"
                        android:layout_height="match_parent"
                        android:background="@android:color/white"/>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/txtMarc"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:textColor="@android:color/white"
                            android:text="@string/lblmarca"
                            android:textSize="18sp"
                            android:layout_gravity="center_vertical"
                            android:gravity="center"/>

                    </LinearLayout>


                </LinearLayout>




            </LinearLayout>


        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/tarjetaEstante"
            app:cardElevation="6dp"
            android:layout_marginBottom="25dp"
            app:cardCornerRadius="6dp"
            app:cardBackgroundColor="#0288D1"
            app:cardPreventCornerOverlap="false"

            >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="10dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/warehouse_32"
                        android:layout_gravity="center_vertical"
                        android:paddingLeft="15dp"
                        android:paddingRight="15dp"/>

                    <View
                        android:layout_width="1dp"
                        android:layout_height="match_parent"
                        android:background="@android:color/white"/>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/txtEstan"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:textColor="@android:color/white"
                            android:text="@string/lblestante"
                            android:textSize="18sp"
                            android:layout_gravity="center_vertical"
                            android:gravity="center"/>

                    </LinearLayout>


                </LinearLayout>




            </LinearLayout>


        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/tarjetaExistencia"
            app:cardElevation="6dp"
            android:layout_marginBottom="25dp"
            app:cardCornerRadius="6dp"
            app:cardBackgroundColor="#0288D1"
            app:cardPreventCornerOverlap="false"

            >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="10dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/stock_32"
                        android:layout_gravity="center_vertical"
                        android:paddingLeft="15dp"
                        android:paddingRight="15dp"/>

                    <View
                        android:layout_width="1dp"
                        android:layout_height="match_parent"
                        android:background="@android:color/white"/>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/txtExiste"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:textColor="@android:color/white"
                            android:text="@string/lblexist"
                            android:textSize="18sp"
                            android:layout_gravity="center_vertical"
                            android:gravity="center"/>

                    </LinearLayout>


                </LinearLayout>
            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/tarjetaPresentaciones"
            app:cardElevation="6dp"
            android:layout_marginBottom="25dp"
            app:cardCornerRadius="6dp"
            app:cardBackgroundColor="#0288D1"
            app:cardPreventCornerOverlap="false"
            >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="10dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/design_32"
                        android:layout_gravity="center_vertical"
                        android:paddingLeft="15dp"
                        android:paddingRight="15dp"/>

                    <View
                        android:layout_width="1dp"
                        android:layout_height="match_parent"
                        android:background="@android:color/white"/>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/txtPresentaciones"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:textColor="@android:color/white"
                            android:text="@string/lblpresenta"
                            android:textSize="18sp"
                            android:layout_gravity="center_vertical"
                            android:gravity="center"/>

                    </LinearLayout>


                </LinearLayout>
            </LinearLayout>
        </androidx.cardview.widget.CardView>


    </LinearLayout>

</FrameLayout>