<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".info_producto">

    <LinearLayout
        android:layout_width="395dp"
        android:layout_height="715dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.51"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:padding="30sp"
        android:scrollbars="vertical">

        <TextView
            android:id="@+id/txtDiag_nom_pro"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="15sp"
            android:text="@string/lblPro"
            android:textSize="15sp" />

        <EditText
            android:id="@+id/txtnomProducto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:gravity="start|top"
            android:inputType="textMultiLine"
            android:textColor="@android:color/black"
            android:textSize="20sp"
            android:enabled="false"/>

        <TextView
            android:id="@+id/textVie"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="15sp"
            android:text="@string/lblCo"
            android:textSize="15sp" />

        <EditText
            android:id="@+id/txtCodigo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:gravity="start|top"
            android:inputType="textMultiLine"
            android:textSize="15sp"
            android:enabled="false"/>


        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/txtInfo_categoria"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingTop="15sp"
                    android:text="Categoria"
                    android:textSize="15sp" />

                <TextView
                    android:id="@+id/txtInfo_marca"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingTop="15sp"
                    android:text="Marca:"
                    android:textSize="15sp" />

            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <EditText
                    android:id="@+id/txtCategoria"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:gravity="start|top"
                    android:inputType="textMultiLine"
                    android:textSize="15sp"
                    android:enabled="false"/>

                <EditText
                    android:id="@+id/txtMarca"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:gravity="start|top"
                    android:inputType="textMultiLine"
                    android:textSize="15sp"
                    android:enabled="false"/>
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/txtInfo_Estante"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingTop="15sp"
                    android:text="Estante:"
                    android:textSize="15sp" />

                <TextView
                    android:id="@+id/txtInfor_existe"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingTop="15sp"
                    android:text="Existencias:"
                    android:textSize="15sp" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <EditText
                    android:id="@+id/txtEstante"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:gravity="start|top"
                    android:inputType="textMultiLine"
                    android:textSize="15sp"
                    android:enabled="false"/>

                <EditText
                    android:id="@+id/txtExisten"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:gravity="start|top"
                    android:inputType="textMultiLine"
                    android:textSize="15sp"
                    android:enabled="false"/>
            </TableRow>


        </TableLayout>

        <Button
            android:id="@+id/btnVerPres"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/prese"
            android:layout_gravity="center"
            style="@style/TextAppearance.AppCompat.Widget.Button.Borderless.Colored"/>



        <ImageView
            android:id="@+id/imageView4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/caja"
            />
        <TextView
            android:id="@+id/txtEditar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="15sp"
            android:text="Presione la imagen para agregar presentaciones"
            android:textAlignment="center"
            android:textSize="15sp" />


    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>